# ReceiptName

./: .gitignore  MANIFEST.in  README.md  config.py  env.example  file_renamer.py  main.py  models.py  ocr_service.py  pyinstaller_config.spec  pyproject.toml  receipt_detector.py  test_ocr.py  开发计划.md  部署说明.md
示例代码/: OCR服务使用示例.md  大模型Base64 编码输入.md  大模型快速入门.md  大模型结构化输出.md
